@@ -3,7 +3,8 @@ version 1.1
 ***********
 
 fixed memory error in streaming c/blob retrieval (double free)
-tagged release as 1.1
+print a warning statement if debugging is enabled if OCI_SUCCESS_WITH_INFO is
+returned by Oracle
 
 
 *************
